# slim-curve

./: .cproject  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  pom.xml
.travis/: build.sh  deploy.sh
src/main/assembly/: asm-windows.xml
src/main/c/: 2DMatrixJProxy.cpp  2DMatrixJProxy.h
src/main/cpp/: fitfunc.h
src/main/java/loci/slim/: SLIMCurveTest.java
src/main/java/slim/: FitFunc.java  FitFunc_new.java  NativeLoader.java
src/main/swig/: SLIMCurve.i  SLIMCurve_1DArray.i  SLIMCurve_2DMatrix.i  SLIMCurve_DMSPVAF.i  SLIMCurve_FittingFunc_n.i  SLIMCurve_ProgressFunc.i  cLibrary.i
src/test/java/loci/slim/: FitTest.java  LibraryLoadTest.java  SingleRLDLMATest.java  SingleRLDTest.java
src/test/java/slim/: SLIMCurveJavaTest.java  SLIMCurveLibLoaderTest.java  SLIMCurveTest.java
